# awth-butler

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  splashscreen.html  tailwind.config.cjs  vite.config.ts
.github/workflows/: main.yml
src/: App.css  App.svelte  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  configure.rs  credentials.rs  error.rs  global.rs  handlers.rs  lib.rs  main.rs  utils.rs
src-tauri/src/aws/: config.rs  credentials.rs  mod.rs
src/components/: ConfigTables.tsx  FreshBadge.tsx  StaleBadge.tsx  ThemeSelect.tsx
src/lib/: Profiles.svelte
src/types/: ButlerSsoConfig.ts  LoginType.ts  table-row.ts
src/utils/: ClickOutside.ts  DisplayDate.ts
