[package]
name = "awth-butler"
version = "0.0.0"
description = "Automating your AWS authentication."
authors = ["George Nelson"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-all", "path-all", "protocol-asset", "system-tray", "shell-open", "icon-png", "linux-protocol-headers"] }
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.29.10"
serde_json = "1.0"
dirs = "5.0.1"
rust-ini = "0.19"
wait-timeout = "0.2.0"
regex = "1.9.6"

[dependencies.fix-path-env]
git = "https://github.com/tauri-apps/fix-path-env-rs"
branch = "release"
#tag = "fix-path-env-v0.1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
