[package]
name = "awth-butler"
version = "0.1.1"
description = "A desktop app for helping with AWS SSO login"
authors = ["George Nelson"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "awth_butler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
anyhow = "1.0.97"
aws-config = { version = "1.6.0", features = ["behavior-version-latest"] }
aws-sdk-sso = "1.62.0"
aws-sdk-ssooidc = "1.63.0"
chrono = { version = "0.4.40", features = ["serde"] }
dirs = "6.0.0"
futures = "0.3.31"
notify = "8.0.0"
rust-ini = "0.21.1"
tauri = { version = "2.4.0", features = [] }
tauri-plugin-shell = "2.2.0"
tauri-plugin-opener = "2.2.0"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
walkdir = "2.5.0"
webbrowser = { version = "1.0.4", features = ["hardened"] }
tauri-plugin-dialog = { version = "2" }

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
